--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header .navbar {
 
 .hero-section {
   height: 100vh;
-  background-image: url("Borcelle.png");
+  background-image: url("Borcelle (1).png");
   background-position: center;
   background-size: cover;
   display: flex;
